四种引用